syntax = "proto3";

package continuonxr.rlds.v1;

// Draft RLDS schema for ContinuonXR. Matches docs/rlds-schema.md.

message EpisodeMetadata {
  string xr_mode = 1; // trainer | workstation | observer
  string control_role = 2; // human_teleop | human_supervisor | human_dev_xr
  string environment_id = 3; // lab-mock, pbos-dev01, etc.
  repeated string tags = 4;

  SoftwareVersions software = 5;
}

message SoftwareVersions {
  string xr_app = 1;
  string continuonbrain_os = 2;
  string glove_firmware = 3;
}

message Episode {
  EpisodeMetadata metadata = 1;
  repeated Step steps = 2;
}

message Observation {
  Pose headset_pose = 1;
  Pose right_hand_pose = 2;
  Pose left_hand_pose = 3;
  Gaze gaze = 4;
  RobotState robot_state = 5;
  GloveFrame glove = 6;

  string video_frame_id = 7;
  string depth_frame_id = 8;
  Diagnostics diagnostics = 9;
  Audio audio = 10;
  UiContext ui_context = 11;
}

message Action {
  repeated float command = 1; // normalized control vector
  string source = 2; // e.g., human_teleop_xr
  Annotation annotation = 3;
  UiAction ui_action = 4;
}

message Pose {
  repeated float position = 1; // [x, y, z]
  repeated float orientation_quat = 2; // [x, y, z, w]
  bool valid = 3;
}

message RobotState {
  int64 timestamp_nanos = 1;
  repeated float joint_positions = 2;
  Pose end_effector_pose = 3;
  bool gripper_open = 4;
  string frame_id = 5;
  repeated float joint_velocities = 6;
  repeated float joint_efforts = 7;
  repeated float end_effector_twist = 8; // [vx, vy, vz, wx, wy, wz]
  int64 wall_time_millis = 9; // wall-clock for alignment checks
}

message GloveFrame {
  int64 timestamp_nanos = 1;
  repeated float flex = 2; // size 5, normalized
  repeated float fsr = 3; // size 8, normalized
  repeated float orientation_quat = 4; // size 4
  repeated float accel = 5; // size 3, m/s^2
  bool valid = 6;
}

message Diagnostics {
  float latency_ms = 1;
  int32 glove_drops = 2;
  int32 ble_rssi = 3;
  float glove_sample_rate_hz = 4;
}

message Annotation {
  string kind = 1;
  map<string, string> fields = 2;
}

message UiAction {
  string action_type = 1;
  map<string, string> context = 2;
}

message Audio {
  string uri = 1;
  int32 sample_rate_hz = 2;
  int32 num_channels = 3;
  string format = 4; // e.g., pcm16le
  string frame_id = 5;
}

message UiContext {
  string active_panel = 1;
  map<string, string> layout = 2;
  map<string, string> focus_context = 3;
}

message Gaze {
  repeated float origin = 1; // [x, y, z]
  repeated float direction = 2; // normalized vector [x, y, z]
  float confidence = 3; // 0..1
  string target_id = 4; // optional UI/scene object id
}

message Step {
  Observation observation = 1;
  Action action = 2;
  bool is_terminal = 3;
  map<string, string> step_metadata = 4;
}
